--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,32 @@ p, li {
 }
 
 h1{
+    margin: 0;
+    padding: 20px 0;
+    text-shadow: 2px 2px 1px black;
     font-size: 60px;
     text-align: center;
+    color: antiquewhite;
 }
 
 #my-id1 {color:peru;}
+img {display: block;
+margin: 0 auto;
+}
+
 html {
     font-size: 10px; /* px set base font to 10px*/
     font-family: "Open Sans", sans-serif;
+}
+
+html {
+    background-color: antiquewhite;
+}
+
+body {
+    width: 600px;
+    margin: 0 auto;
+    background-color: thistle;
+    padding: 0 20px 20px 20px;
+    border: 5px solid black;
 }
